--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -1,107 +1,120 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Style+Script&display=swap");
 
 * {
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  text-decoration: none;
+  list-style: none;
+  box-sizing: border-box;
+  font-family: Helvetica;
 }
 
-body {
-    font-family: 'Roboto', sans-serif;
-    margin: 0;
-    padding: 0;
+/* Start Navbar section */
+.navbar {
+  display: flex;
+  align-items: center;
+  padding-left: 20px;
+  padding-right: 20px;
+  justify-content: space-between;
+  background-color: lightblue;
+  height: 90px;
+  weight: 100%;
 }
 
-main {
-    padding: 20px;
-    overflow: auto;
+.nav-button:hover {
+  border-bottom: white 2px solid;
 }
 
-nav a:hover {
-    font-weight: bold;
+.nav-logo {
+  color: white;
+  margin-right: 10px;
+  font-size: 25px;
+  font-family: "Style Script", cursive;
 }
 
-.profile header {
-    text-align: center;
+.nav-link {
+  display: flex;
 }
 
-h2,
-h3 {
-    color: #00a2c6;
+.nav-button {
+  color: white;
+  margin-left: 10px;
 }
 
-footer {
-    padding: 20px;
-    color: white;
-    background-color: #00a2c6;
-    text-align: center;
-    font-weight: bold;
+.nav-item {
+  display: flex;
+  align-items: center;
 }
 
-.featured-image {
-    width: 100%;
-    max-height: 300px;
-    object-fit: cover;
-    object-position: center;
+.nav-auth {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 10px;
+  color: white;
+  border: white 2px solid;
+  width: 4rem;
+  height: 2rem;
+  border-radius: 4px;
+  font-size: 12px;
 }
 
-.profile img {
-    width: 200px;
+.login {
+  background-color: darkgreen;
 }
 
-.card {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3);
-    border-radius: 8px;
-    padding: 20px;
-    margin-top: 20px;
+.login:hover {
+  background-color: lightgreen;
+  color: black;
 }
 
-.jumbotron {
-    font-size: 18px;
-    padding: 30px;
-    background-color: #00c8eb;
-    text-align: center;
-    color: white;
+.register {
+  background-color: darkorange;
 }
 
-nav li {
-    display: inline;
-    list-style-type: none;
-    margin-right: 15px;
+.register:hover {
+  background-color: lightsalmon;
+  color: black;
 }
 
-nav {
-    background-color: #00a2c6;
-    padding: 5px;
-    position: sticky;
-    top: 0;
+/* End Navbar section */
+
+/* Start Main Section */
+#main {
+  display: flex;
+  justify-content: center;
 }
 
-nav a {
-    font-size: 18px;
-    font-weight: 400;
-    text-decoration: none;
-    color: white;
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
-#content {
-    float: left;
-    width: 75%;
+.main-title {
+  font-size: 200px;
+  color: lightpink;
+  font-family: "Style Script", cursive;
 }
 
-aside {
-    float: right;
-    width: 25%;
-    padding-left: 20px;
+.main-desc {
+  color: lightseagreen;
 }
 
-@media screen and (max-width: 1000px) {
-
-    #content,
-    aside {
-        width: 100%;
-        padding: 0;
-    }
+.main-text {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-header {
-    display: inline;
+.main-button {
+  display: flex;
+  margin-top: 20px;
 }
+
+.btn {
+  margin-left: 20px;
+}
+/* End Main Section */
